--- a/profile.html
+++ b/profile.html
@@ -3,9 +3,99 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/style/style.css">
+    <title>Profile</title>
 </head>
 <body>
+    <header id="profile">
+        <img src="assets/netflix_logo.png" alt="logo" width="200px" height="80px">
+    </header>
+    <main id="mainProfile">
+        <h1 class="py-3">Edit Profile</h1>
+        <div class="container p-0 pe-3 py-3 border-top border-secondary">
+            <div class="row">
+              <div class="col-5">
+                <div class="position-relative">
+                    <img src="assets/avatar.png" alt="avatar" width="170px" height="auto">
+                    <span id="penProfile"><ion-icon name="pencil"></ion-icon></span>
+                </div>
+              </div>
+              <div class="col-7 text-start border-bottom p-0 d-flex flex-column justify-content-between">
+                <h3 class="px-3 py-1" >Strive Student</h3>
+                <div>
+                    <h4 class="pt-4 mt-4">Language:</h4>
+                    <div class="dropdown mt-3 pb-3">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Dropdown button
+                        </button>
+                        <ul class="dropdown-menu">
+                          <li><a class="dropdown-item" href="#">Action</a></li>
+                          <li><a class="dropdown-item" href="#">Another action</a></li>
+                          <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                      </div>
+                  </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-5">
+                  <div class="position-relative">
+                      <div></div>
+                  </div>
+                </div>
+                <div class="col-7 text-start border-bottom p-0 d-flex flex-column justify-content-between">
+                  <h4 class="py-2">Maturity Settings</h4>
+                  <button id="profileBtn1" type="button" class="btn">ALL MATURITY RATINGS</button>
+                  <div>
+                      <h6 class="py-2">Show titles of all maturity ratings for this profile</h6>
+                      <button id="profileBtn2" type="button" class="btn">EDIT</button>
+                    </div>
+                  </div>
+              </div>
+              <div class="row">
+                <div class="col-5">
+                  <div class="position-relative">
+                      <div></div>
+                  </div>
+                </div>
+                <div class="col-7 text-start border-bottom p-0 d-flex flex-column justify-content-between">
+                  <h4 class="py-2">Autoplay controls</h4>
+                  <div class="container-fluid d-flex align-items-center justify-content-start p-0">
+                      <span id="checkProfile">
+                        <ion-icon name="checkmark-outline"></ion-icon>
+                      </span>
+                      <p>Autoplay next episode in a series on all devices</p>
+                  </div>
+                  <div class="container-fluid d-flex align-items-center justify-content-start p-0">
+                    <span id="checkProfile">
+                      <ion-icon name="checkmark-outline"></ion-icon>
+                    </span>
+                    <p>Autoplay previews while browsing on all devices</p>
+                </div>
+              </div>
+          </div>
+    </main>
+    <footer>
+        <div class="container text-center">
+            <div class="row">
+              <div class="col-3">
+                <button id="profileBtn2" type="button" class="btn bg-white text-black">SAVE</button>
+              </div>
+              <div class="col-4">
+                <button id="profileBtn2" type="button" class="btn">CANCEL</button>
+              </div>
+              <div class="col-5">
+                <button id="profileBtn2" type="button" class="btn ">DELETE PROFILE</button>
+              </div>
+            </div>
+          </div>
+    </footer>
     
+
+
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+      <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
