--- a/netflix.html
+++ b/netflix.html
@@ -34,7 +34,7 @@
             </ul>
             <div class="d-flex justify-content-center align-items-center" role="search">
               <ion-icon name="search-outline"></ion-icon>
-              <a class="nav-link" href="#">KIDS</a>
+              <a class="nav-link" href="http://127.0.0.1:5500/profile.html">KIDS</a>
               <ion-icon name="notifications"></ion-icon>
               <img src="assets/avatar.png" alt="" width="30px" height="auto">
               <ion-icon name="caret-down"></ion-icon>
