--- a/profile.html
+++ b/profile.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header id="profile">
-        <img src="assets/netflix_logo.png" alt="logo" width="200px" height="80px">
+        <a href="http://127.0.0.1:5500/netflix.html"><img src="assets/netflix_logo.png" alt="logo" width="200px" height="80px"></a>
     </header>
     <main id="mainProfile">
         <h1 class="py-3">Edit Profile</h1>
