--- a/netflix.html
+++ b/netflix.html
@@ -290,7 +290,7 @@
             </div>
             <div class="row">
               <div class="col py-2">
-                <a class="btn" href="#">Service Code</a>
+                <a class="btn bg-transparent border-2 border-secondary text-secondary" href="#">Service Code</a>
               </div>
               <div class="row">
                 <div class="col py-2">
