--- a/profile.html
+++ b/profile.html
@@ -13,7 +13,7 @@
     </header>
     <main id="mainProfile">
         <h1 class="py-3">Edit Profile</h1>
-        <div class="container p-0 pe-3 py-3 border-top border-secondary">
+        <div class="container p-0 pe-3 py-3 border-top border-bottom border-secondary">
             <div class="row">
               <div class="col-5">
                 <div class="position-relative">
