modified carousel id

--- a/netflix.html
+++ b/netflix.html
@@ -121,7 +121,7 @@
           </button>
         </div>
         <h2 class="fs-4 fw-bold m-0 pt-3">Watch It Again</h2>
-        <div id="carouselExample" class="carousel slide py-4">
+        <div id="carouselExample2" class="carousel slide py-4">
           <div class="carousel-inner">
             <div class="carousel-item active">
               <div class="row">
@@ -168,17 +168,17 @@
               </div>
             </div>
           </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample2" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
           </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExample2" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
           </button>
         </div>
         <h2 class="fs-4 fw-bold m-0 pt-3">Trending Now</h2>
-        <div id="carouselExample" class="carousel slide py-4">
+        <div id="carouselExample3" class="carousel slide py-4">
           <div class="carousel-inner">
             <div class="carousel-item active">
               <div class="row">
@@ -225,11 +225,11 @@
               </div>
             </div>
           </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample3" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
           </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExample3" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
           </button>
