--- a/netflix.html
+++ b/netflix.html
@@ -74,16 +74,16 @@
                 <div class="col p-0">
                   <img src="assets/media/media1.jpg" class="d-block w-100" alt="...">
                 </div>
-                <div class="col p-0">
+                <div class="d-none d-md-block col-md p-0">
                   <img src="assets/media/media2.webp" class="d-block w-100" alt="...">
                 </div>
-                <div class="col p-0">
+                <div class="d-none d-md-block col-md p-0">
                   <img src="assets/media/media3.webp" class="d-block w-100" alt="...">
                 </div>
-                <div class="col p-0">
+                <div class="d-none d-lg-block col-lg p-0">
                   <img src="assets/media/media4.jpg" class="d-block w-100" alt="...">
                 </div>
-                <div class="col p-0">
+                <div class="d-none d-lg-block col-lg p-0">
                   <img src="assets/media/media5.webp" class="d-block w-100" alt="...">
                 </div>
               </div>
@@ -96,16 +96,16 @@
                 <div class="col p-0">
                   <img src="assets/media/media7.webp" class="d-block w-100" alt="...">
                 </div>
-                <div class="col p-0">
+                <div class="d-none d-md-block col-md col p-0">
                   <img src="assets/media/media8.webp" class="d-block w-100" alt="...">
                 </div>
-                <div class="col p-0">
+                <div class="d-none d-md-block col-md col p-0">
                   <img src="assets/media/media9.jpg" class="d-block w-100" alt="...">
                 </div>
-                <div class="col p-0">
+                <div class="d-none d-lg-block col-lg col p-0">
                   <img src="assets/media/media10.jpg" class="d-block w-100" alt="...">
                 </div>
-                <div class="col p-0">
+                <div class="d-none d-lg-block col-lg col p-0">
                   <img src="assets/media/media11.jpg" class="d-block w-100" alt="...">
                 </div>
               </div>
@@ -131,16 +131,16 @@
                 <div class="col p-0">
                   <img src="assets/media/media13.jpg" class="d-block w-100" alt="...">
                 </div>
-                <div class="col p-0">
+                <div class="d-none d-md-block col-md col p-0">
                   <img src="assets/media/media14.webp" class="d-block w-100" alt="...">
                 </div>
-                <div class="col p-0">
+                <div class="d-none d-md-block col-md col p-0">
                   <img src="assets/media/media15.jpg" class="d-block w-100" alt="...">
                 </div>
-                <div class="col p-0">
+                <div class="d-none d-lg-block col-lg col p-0">
                   <img src="assets/media/media16.webp" class="d-block w-100" alt="...">
                 </div>
-                <div class="col p-0">
+                <div class="d-none d-lg-block col-lg col p-0">
                   <img src="assets/media/media17.jpg" class="d-block w-100" alt="...">
                 </div>
               </div>
@@ -153,16 +153,16 @@
                 <div class="col p-0">
                   <img src="assets/media/media19.webp" class="d-block w-100" alt="...">
                 </div>
-                <div class="col p-0">
+                <div class="d-none d-md-block col-md col p-0">
                   <img src="assets/media/media20.jpg" class="d-block w-100" alt="...">
                 </div>
-                <div class="col p-0">
+                <div class="d-none d-md-block col-md col p-0">
                   <img src="assets/media/media21.webp" class="d-block w-100" alt="...">
                 </div>
-                <div class="col p-0">
+                <div class="d-none d-lg-block col-lg col p-0">
                   <img src="assets/media/media22.webp" class="d-block w-100" alt="...">
                 </div>
-                <div class="col p-0">
+                <div class="d-none d-lg-block col-lg col p-0">
                   <img src="assets/media/media23.webp" class="d-block w-100" alt="...">
                 </div>
               </div>
@@ -188,16 +188,16 @@
                 <div class="col p-0">
                   <img src="assets/media/media25.webp" class="d-block w-100" alt="...">
                 </div>
-                <div class="col p-0">
+                <div class="d-none d-md-block col-md col p-0">
                   <img src="assets/media/media26.webp" class="d-block w-100" alt="...">
                 </div>
-                <div class="col p-0">
+                <div class="d-none d-md-block col-md col p-0">
                   <img src="assets/media/media27.jpg" class="d-block w-100" alt="...">
                 </div>
-                <div class="col p-0">
+                <div class="d-none d-lg-block col-lg col p-0">
                   <img src="assets/media/media28.jpg" class="d-block w-100" alt="...">
                 </div>
-                <div class="col p-0">
+                <div class="d-none d-lg-block col-lg col p-0">
                   <img src="assets/media/media29.jpg" class="d-block w-100" alt="...">
                 </div>
               </div>
@@ -210,16 +210,16 @@
                 <div class="col p-0">
                   <img src="assets/media/media31.webp" class="d-block w-100" alt="...">
                 </div>
-                <div class="col p-0">
+                <div class="d-none d-md-block col-md col p-0">
                   <img src="assets/media/media32.jpg" class="d-block w-100" alt="...">
                 </div>
-                <div class="col p-0">
+                <div class="d-none d-md-block col-md col p-0">
                   <img src="assets/media/media0.webp" class="d-block w-100" alt="...">
                 </div>
-                <div class="col p-0">
+                <div class="d-none d-lg-block col-lg col p-0">
                   <img src="assets/media/media1.jpg" class="d-block w-100" alt="...">
                 </div>
-                <div class="col p-0">
+                <div class="d-none d-lg-block col-lg col p-0">
                   <img src="assets/media/media2.webp" class="d-block w-100" alt="...">
                 </div>
               </div>
